[gd_scene load_steps=5 format=3 uid="uid://gebj10hcnogc"]

[ext_resource type="Theme" uid="uid://cn5heyqgh7ypt" path="res://Menus/AssetsScreens/Theme.tres" id="1_oiqpt"]
[ext_resource type="Script" uid="uid://bnablnjca70q3" path="res://Menus/Screens/ResultScreen/result.gd" id="2_ib1v6"]
[ext_resource type="Texture2D" uid="uid://bnhmjfcjlhe1j" path="res://Menus/AssetsScreens/Image/Table.png" id="2_xt65b"]
[ext_resource type="Texture2D" uid="uid://cnjwl71pkeecb" path="res://Menus/AssetsScreens/Image/ArchiveOpen.png" id="3_ib1v6"]

[node name="ResultScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oiqpt")
script = ExtResource("2_ib1v6")

[node name="Table" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xt65b")

[node name="ArchiveOpen" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_ib1v6")

[node name="Report" type="PanelContainer" parent="ArchiveOpen"]
custom_minimum_size = Vector2(350, 600)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36328125
anchor_top = 0.08194444
anchor_right = 0.6375
anchor_bottom = 0.9152778
theme = ExtResource("1_oiqpt")
metadata/_edit_use_anchors_ = true

[node name="Margin" type="MarginContainer" parent="ArchiveOpen/Report"]
layout_mode = 2
theme_type_variation = &"MarginPaper"

[node name="Content" type="VBoxContainer" parent="ArchiveOpen/Report/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="ArchiveOpen/Report/Margin/Content"]
layout_mode = 2
theme = ExtResource("1_oiqpt")
theme_type_variation = &"TitleScreen"
text = "Report"
horizontal_alignment = 1

[node name="TitleScreenSeparator" type="HSeparator" parent="ArchiveOpen/Report/Margin/Content"]
layout_mode = 2
theme_type_variation = &"TitleScreenSeparator"

[node name="DayInfo" type="Panel" parent="ArchiveOpen/Report/Margin/Content"]
custom_minimum_size = Vector2(200, 120)
layout_mode = 2
theme_type_variation = &"Paper"

[node name="Margin" type="MarginContainer" parent="ArchiveOpen/Report/Margin/Content/DayInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginSection"

[node name="Content" type="VBoxContainer" parent="ArchiveOpen/Report/Margin/Content/DayInfo/Margin"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleSection" type="Label" parent="ArchiveOpen/Report/Margin/Content/DayInfo/Margin/Content"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"TitleSection"
text = "Day 0"
horizontal_alignment = 1

[node name="TitleSectionSeparator" type="HSeparator" parent="ArchiveOpen/Report/Margin/Content/DayInfo/Margin/Content"]
layout_mode = 2
theme_type_variation = &"TitleSectionSeparator"

[node name="Merits" type="Label" parent="ArchiveOpen/Report/Margin/Content/DayInfo/Margin/Content"]
layout_mode = 2
text = "Quantity of merits: 00"

[node name="Demerits" type="Label" parent="ArchiveOpen/Report/Margin/Content/DayInfo/Margin/Content"]
layout_mode = 2
text = "Quantity of demerits: 00"

[node name="SectionSeparator" type="HSeparator" parent="ArchiveOpen/Report/Margin/Content"]
layout_mode = 2
theme_type_variation = &"SectionSeparator"

[node name="CitySituation" type="Panel" parent="ArchiveOpen/Report/Margin/Content"]
custom_minimum_size = Vector2(200, 210)
layout_mode = 2
theme_type_variation = &"Paper"

[node name="Margin" type="MarginContainer" parent="ArchiveOpen/Report/Margin/Content/CitySituation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginSection"

[node name="Content" type="VBoxContainer" parent="ArchiveOpen/Report/Margin/Content/CitySituation/Margin"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0

[node name="TitleSection" type="Label" parent="ArchiveOpen/Report/Margin/Content/CitySituation/Margin/Content"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"TitleSection"
text = "City situation"
horizontal_alignment = 1

[node name="TitleSectionSeparator" type="HSeparator" parent="ArchiveOpen/Report/Margin/Content/CitySituation/Margin/Content"]
layout_mode = 2
theme_type_variation = &"TitleSectionSeparator"

[node name="Good" type="RichTextLabel" parent="ArchiveOpen/Report/Margin/Content/CitySituation/Margin/Content"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"CitySituation"
text = "Thanks to the coordination of personnel, the city regained its stability and was able to move forward."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bad" type="RichTextLabel" parent="ArchiveOpen/Report/Margin/Content/CitySituation/Margin/Content"]
visible = false
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"CitySituation"
text = "Despite the coordination of personnel, the city plunged back into chaos."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Neutral" type="RichTextLabel" parent="ArchiveOpen/Report/Margin/Content/CitySituation/Margin/Content"]
visible = false
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"CitySituation"
text = "With personnel coordination, the city remained at a standstill, with no visible progress or setbacks."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SectionSeparator2" type="HSeparator" parent="ArchiveOpen/Report/Margin/Content"]
layout_mode = 2
theme_type_variation = &"SectionSeparator"

[node name="Continue" type="Button" parent="ArchiveOpen/Report/Margin/Content"]
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonAply"
text = "Continue"

[node name="ConfirmationMainMenu" type="PanelContainer" parent="ArchiveOpen"]
visible = false
custom_minimum_size = Vector2(350, 600)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36328125
anchor_top = 0.08194444
anchor_right = 0.6375
anchor_bottom = 0.9152778
theme = ExtResource("1_oiqpt")
metadata/_edit_use_anchors_ = true

[node name="Margin" type="MarginContainer" parent="ArchiveOpen/ConfirmationMainMenu"]
layout_mode = 2
theme_type_variation = &"MarginPaper"

[node name="Content" type="VBoxContainer" parent="ArchiveOpen/ConfirmationMainMenu/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content"]
layout_mode = 2
theme = ExtResource("1_oiqpt")
theme_type_variation = &"TitleScreenQuit"
text = "Confirmation 
form"
horizontal_alignment = 1

[node name="TitleScreenSeparator" type="HSeparator" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content"]
layout_mode = 2
theme_type_variation = &"TitleScreenSeparator"

[node name="Panel" type="Panel" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
theme_type_variation = &"Paper"

[node name="MarginContainer" type="MarginContainer" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginSection"

[node name="RichTextLabel" type="RichTextLabel" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Panel/MarginContainer"]
layout_mode = 2
theme_type_variation = &"ConfirmationForm"
text = "This term is used to find out if the player wants to return to the main menu.
If they want to return, they simply click on “CONFIRM,” but if they want to continue playing, they simply click on “DENY”"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="SectionSeparator" type="HSeparator" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content"]
layout_mode = 2
theme_type_variation = &"SectionSeparator"

[node name="Buttons" type="HBoxContainer" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="Deny" type="Button" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonQuitScreen"
text = "Deny"

[node name="backMainMenuConfirm" type="Button" parent="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonQuitScreen"
text = "Confirm"

[node name="ConfirmationQuit" type="PanelContainer" parent="ArchiveOpen"]
visible = false
custom_minimum_size = Vector2(350, 600)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36328125
anchor_top = 0.08194444
anchor_right = 0.6375
anchor_bottom = 0.9152778
theme = ExtResource("1_oiqpt")
metadata/_edit_use_anchors_ = true

[node name="Margin" type="MarginContainer" parent="ArchiveOpen/ConfirmationQuit"]
layout_mode = 2
theme_type_variation = &"MarginPaper"

[node name="Content" type="VBoxContainer" parent="ArchiveOpen/ConfirmationQuit/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="ArchiveOpen/ConfirmationQuit/Margin/Content"]
layout_mode = 2
theme = ExtResource("1_oiqpt")
theme_type_variation = &"TitleScreenQuit"
text = "Confirmation 
form"
horizontal_alignment = 1

[node name="TitleScreenSeparator" type="HSeparator" parent="ArchiveOpen/ConfirmationQuit/Margin/Content"]
layout_mode = 2
theme_type_variation = &"TitleScreenSeparator"

[node name="Panel" type="Panel" parent="ArchiveOpen/ConfirmationQuit/Margin/Content"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
theme_type_variation = &"Paper"

[node name="Margin" type="MarginContainer" parent="ArchiveOpen/ConfirmationQuit/Margin/Content/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginSection"

[node name="RichTextLabel" type="RichTextLabel" parent="ArchiveOpen/ConfirmationQuit/Margin/Content/Panel/Margin"]
layout_mode = 2
theme_type_variation = &"ConfirmationForm"
text = "This term is used to find out if the player wants to leave the game.
If they want to leave, they just need to click “CONFIRM,” but if they want to continue playing, they just need to click “DENY.”"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="SectionSeparator" type="HSeparator" parent="ArchiveOpen/ConfirmationQuit/Margin/Content"]
layout_mode = 2
theme_type_variation = &"SectionSeparator"

[node name="Buttons" type="HBoxContainer" parent="ArchiveOpen/ConfirmationQuit/Margin/Content"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 70

[node name="Deny" type="Button" parent="ArchiveOpen/ConfirmationQuit/Margin/Content/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonQuitScreen"
text = "Deny"

[node name="quitConfirm" type="Button" parent="ArchiveOpen/ConfirmationQuit/Margin/Content/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonQuitScreen"
text = "Confirm"

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.659375
anchor_top = 0.08055556
anchor_right = 0.659375
anchor_bottom = 0.3666682
offset_left = 25.0
offset_right = 231.0011
offset_bottom = -175.0011
rotation = 1.5707964
theme_override_constants/separation = 10
alignment = 1

[node name="MainMenu" type="Button" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_oiqpt")
theme_type_variation = &"ButtonFile"
text = "Main menu"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ButtonFile"
text = "Quit"

[connection signal="pressed" from="ArchiveOpen/Report/Margin/Content/Continue" to="." method="hide"]
[connection signal="pressed" from="ArchiveOpen/Report/Margin/Content/Continue" to="." method="btnPress"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons/Deny" to="." method="denyBtnPressed"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons/Deny" to="ArchiveOpen/Report" method="show"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons/Deny" to="ArchiveOpen/ConfirmationMainMenu" method="hide"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons/Deny" to="ArchiveOpen/ConfirmationQuit" method="hide"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationMainMenu/Margin/Content/Buttons/backMainMenuConfirm" to="." method="btnPress"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationQuit/Margin/Content/Buttons/Deny" to="." method="denyBtnPressed"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationQuit/Margin/Content/Buttons/Deny" to="ArchiveOpen/Report" method="show"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationQuit/Margin/Content/Buttons/Deny" to="ArchiveOpen/ConfirmationQuit" method="hide"]
[connection signal="pressed" from="ArchiveOpen/ConfirmationQuit/Margin/Content/Buttons/quitConfirm" to="." method="btnPress"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="btnPress"]
[connection signal="pressed" from="Buttons/MainMenu" to="ArchiveOpen/Report" method="hide"]
[connection signal="pressed" from="Buttons/MainMenu" to="ArchiveOpen/ConfirmationMainMenu" method="show"]
[connection signal="pressed" from="Buttons/MainMenu" to="ArchiveOpen/ConfirmationQuit" method="hide"]
[connection signal="pressed" from="Buttons/Quit" to="." method="btnPress"]
[connection signal="pressed" from="Buttons/Quit" to="ArchiveOpen/Report" method="hide"]
[connection signal="pressed" from="Buttons/Quit" to="ArchiveOpen/ConfirmationMainMenu" method="hide"]
[connection signal="pressed" from="Buttons/Quit" to="ArchiveOpen/ConfirmationQuit" method="show"]
